--- a/MyMusic/templates/home.html
+++ b/MyMusic/templates/home.html
@@ -27,7 +27,7 @@
             top: 50%;
             left: 50%;
             height: 100%;
-            width: auto;
+            width: 100%;
             -webkit-transform: translate(-50%, -50%);
             transform: translate(-50%, -50%);
             object-fit: cover;
@@ -176,11 +176,11 @@
         <form action="{{ url_for('register') }}" method="post">
             <div class="form-group">
                 <label for="register-username">Username</label>
-                <input type="text" class="form-control" id="register-username" name="username" required>
+                <input type="text" class="form-control" id="username" name="username" required>
             </div>
             <div class="form-group">
                 <label for="register-password">Password</label>
-                <input type="password" class="form-control" id="register-password" name="password" required>
+                <input type="password" class="form-control" id="password" name="password" required>
             </div>
             <button type="submit" class="btn btn-custom btn-block">Registrati</button>
         </form>
@@ -190,11 +190,11 @@
         <form action="{{ url_for('login') }}" method="post">
             <div class="form-group">
                 <label for="login-username">Username</label>
-                <input type="text" class="form-control" id="login-username" name="username" required>
+                <input type="text" class="form-control" id="username" name="username" required>
             </div>
             <div class="form-group">
                 <label for="login-password">Password</label>
-                <input type="password" class="form-control" id="login-password" name="password" required>
+                <input type="password" class="form-control" id="password" name="password" required>
             </div>
             <button type="submit" class="btn btn-custom btn-block">Accedi</button>
         </form>
