--- a/MyMusic/templates/search.html
+++ b/MyMusic/templates/search.html
@@ -14,10 +14,11 @@
       color: #FF69B4; /* Pink text color */
     }
     header {
-      background:  linear-gradient(to right, #002aff, #ff0000);  /* Gradient background */
+      background: linear-gradient(to right, #002aff, #ff0000);  /* Gradient background */
       color: #FF69B4; /* Pink text color */
       padding: 20px 10px;
       text-align: center;
+      position: relative;
     }
     header img {
       width: auto;
@@ -118,11 +119,29 @@
       max-height: 200px; /* Limit image height */
       border-radius: 10px; /* Rounded corners for image */
     }
+    .logout-button {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      background: linear-gradient(to right, #1E90FF, #FF69B4); /* Button gradient */
+      color: #FFFFFF; /* White text color */
+      border: none;
+      padding: 10px 20px;
+      border-radius: 20px;
+      cursor: pointer;
+      transition: background 0.3s ease, color 0.3s ease; /* Transition for color change */
+    }
+    .logout-button:hover {
+      background: linear-gradient(to right, #FFFF00, #FF69B4); /* Button gradient on hover */
+      color: #000000; /* Black text color on hover */
+    }
+
   </style>
 </head>
 <body>
 
     <header>
+        <button class="logout-button" onclick="window.location.href='http://localhost:8000/logout'">Logout</button>
         <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Your Image" style="width: auto; height: 150px; padding-bottom: 20px;">
         <nav>
           <ul>
