--- a/MyMusic/templates/search.html
+++ b/MyMusic/templates/search.html
@@ -135,13 +135,44 @@
       background: linear-gradient(to right, #FFFF00, #FF69B4); /* Button gradient on hover */
       color: #000000; /* Black text color on hover */
     }
-
+    .video-container {
+      position: relative;
+      left: 25%;
+      width: 50%;
+      height: 200px;
+      margin-bottom: 20px;
+      border-radius: 10px;
+      background-color: black;
+      overflow: hidden; /* Ensure the video fits within the container */
+      border: 2px solid lightblue;
+      transition: transform 0.3s ease; /* Smooth transition effect */
+    }
+    .video-container:hover {
+      transform: scale(1.1); /* Slightly enlarge on hover */
+      cursor: pointer;
+    }
+    .video-container video {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+      filter: brightness(50%); /* Darken the video */
+    }
+    .video-container .overlay-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: #FFFF00; /* Yellow text color */
+      font-size: 2em; /* Larger font size */
+      padding: 10px 20px;
+      border-radius: 10px;
+    }
   </style>
 </head>
 <body>
 
     <header>
-        <button class="logout-button" onclick="window.location.href='http://localhost:8000/logout'">Logout</button>
+        <button class="logout-button" onclick="confirmLogout()">Logout</button>
         <img src="{{ url_for('static', filename='images/logo.png') }}" alt="Your Image" style="width: auto; height: 150px; padding-bottom: 20px;">
         <nav>
           <ul>
@@ -153,6 +184,16 @@
 
   <div class="container">
     <h1>Benvenuto {{ username }}</h1>
+
+    <!-- Video section -->
+    <div class="video-container" onclick="redirectToPlaylist()">
+      <video autoplay muted loop>
+        <source src="{{ url_for('static', filename='video/dancingman.mp4') }}" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+      <div class="overlay-text">La Tua Playlist</div>
+    </div>
+
     <div class="search-container">
       <form action="http://localhost:8000/search" method="post">
         <input type="text" name="search_query" placeholder="Search playlists...">
@@ -176,6 +217,15 @@
   </div>
 </body>
 <script>
+  function confirmLogout() {
+    // Mostra una finestra di conferma
+    var isConfirmed = confirm('Sei sicuro di voler effettuare il logout?');
+    if (isConfirmed) {
+      // Se l'utente conferma, esegui il logout
+      window.location.href = 'http://localhost:8000/logout';
+    }
+  }
+
   // Select all h3 elements
   var albumTitles = document.querySelectorAll('.playlist-item h3');
 
@@ -199,5 +249,9 @@
     // Redirect the entire page to the saved page, not only the iframe
     parent.location.href = 'http://localhost:8000/local';
   }
+
+  function redirectToPlaylist() {
+      window.location.href = 'http://localhost:8000/favorite'; // Replace with the actual link
+    }
 </script>
 </html>
